--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 Flask>=2.2.0
 Flask-SQLAlchemy>=2.5.1
 PyMySQL==1.0.2
-python-dotenv==1.0.0
+SQLAlchemy>=1.4.25
+python-dotenv>=0.19.1
+cryptography==3.4.8
