refactor: update database connection string in .env file

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SQLALCHEMY_DATABASE_URI='mysql+pymysql://mydb:password@db:3306/mydb'
+SQLALCHEMY_DATABASE_URI=mysql+pymysql://myuser:password@db:3306/mydb
 MYSQL_ROOT_PASSWORD=root_password
 MYSQL_DATABASE=mydb
 MYSQL_USER=myuser
